@startuml
'https://plantuml.com/class-diagram
!theme spacelab

class MCP3208 {}
note left
 Will need Channel No
 + Config transformer SPIBuilder

 This is also registered into the ReaderBuilder
end note

class SPIBuilder {}

class TemperatureSensor{}

class TemperatureCelsius{}
note right
 This is what the ResponseTransformer
 should return
end note


class SPIClient{}

class SPIDevClient{}
note right
 This is registered into the SPIBuilder
end note

class ReaderSupplier{}
class MCP3208Reader{}
class DeviceFactory{}
class ConfigLoader{}

class ResponseTransformer{}
note bottom
 the transformer will be based on the
 type of sensor will are using

 Some temperature sensor will be different
 and hence transforming differently

 These are registered into the factory
end note

class ResponseTransformerFactory{}

class TemperatureTransformer{}
note right
  This should be using TemperatureCelsius
  Strategy pattern
end note

MCP3208 -- SPIClient : executes command on
MCP3208 -- SPIBuilder: requests a client from
SPIClient -> SPIDevClient
SPIBuilder -- SPIClient : Creates
TemperatureSensor -- MCP3208Reader :requests and reads response from reader
TemperatureSensor -- ReaderSupplier
DeviceFactory -- MCP3208 : creates
DeviceFactory -- ConfigLoader
ReaderSupplier -- MCP3208Reader: Gets a reader
MCP3208Reader -- DeviceFactory: Gets a device from
MCP3208 -- ConfigLoader: load specific settings for sensor
TemperatureSensor -- ResponseTransformer: transforms the response from the reader
TemperatureSensor -- ResponseTransformerFactory
ResponseTransformer --> TemperatureTransformer
TemperatureTransformer -- TemperatureCelsius


@enduml